--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "2.26.5",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "browser-sync": "^2.26.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "6.1.0",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "4.2.0",
     "gulp-concat": "2.6.1",
     "gulp-rm": "2.0.0",
     "gulp-sass": "^4.1.1",
     "gulp-sass-glob": "1.0.9",
     "gulp-sourcemaps": "2.6.5",
+    "gulp-uglify": "^3.0.2",
     "node-sass": "4.12.0"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "sass": "^1.39.0"
   }
 }
